# AnalysisToolsPrototypes_Renamed

./: README.md  rename_tests
art_gallery_andy/: CMakeLists.txt  README.md  art_gallery_prototype_macro.C  art_gallery_prototype_main.cc  hists.json  hists.pkl  setup.sh
art_gallery_andy/configs/json/: example.json
art_gallery_andy/configs/pkl/: Hists.pkl  example.pkl
root_make_class_sophie/: README.md  example_use.C  example_use_C_ACLiC_dict_rdict.pcm  trkana.C  trkana.h
skim/: .gitignore  README.md  simple-skims.fcl
trkana_helper_andy/: README.md
